--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "vue": {
+    "publicPath": "./"
+  },
   "dependencies": {
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.19.0",
